# yt-mirror

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yml
example/: yt-mirror.toml
src/: data.rs  downloader.rs  main.rs  process_repository.rs  types.rs  ui.rs  youtube.rs
src/api/: cli.rs
src/config/: app_config.rs  config.rs  mod.rs
