[package]
name = "yt-mirror"
version = "1.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
async-channel = "1.8.0"
clap = { version = "4.1.6", features = ["derive"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
url = "2.3.1"
