[package]
name = "yt-mirror"
version = "1.0.1"
description = "Loads browser bookmarks, and downloads all youtube videos converting them to music files"
license = "GPL-3.0"
repository = "https://github.com/team-borygo/yt-mirror"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.6", features = ["derive"] }
crossbeam-channel = "0.5.6"
crossterm = "0.26.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tui = "0.19.0"
url = "2.3.1"
